[package]
name = "rust-dust-sweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv= "0.15"
alloy = "1.7.3"
anyhow = "1.0.102"
eyre = "0.6.12"
just = "1.47.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = "4.6.0"
axum = "0.8.8"
tower-http = { version = "0.5", features = ["cors"] }

